fix(style): decrease reference font-size on mobile

--- a/taipy_theme/assets/stylesheets/avaiga.css
+++ b/taipy_theme/assets/stylesheets/avaiga.css
@@ -81,6 +81,12 @@
   --md-hue: 270; 
 }
 
+@media screen and (max-width: 59.9375em){
+  html{
+    font-size: 100%;
+  }
+}
+
 .md-grid{
   max-width: var(--md-grid-max-width);
 }
